# shelephant

./: .pre-commit-config.yaml  .readthedocs.yml  .readthedocsenv.yml  README.md  azure-pipelines.yml  environment.yaml  pyproject.toml  setup.py
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.github/workflows/: ci.yml
docs/: changelog.rst  cli.rst  conf.py  copying.rst  dataset.rst  dataset_api.rst  getting.rst  index.rst  python.rst
shelephant/: __init__.py  _compute_info.py  _remove.py  _tests.py  checksum.py  cli.py  compute_hash.py  convert.py  dataset.py  detail.py  external.py  git.py  info.py  local.py  output.py  path.py  relpath.py  rich.py  rsync.py  scp.py  search.py  ssh.py  yaml.py
shelephant/cli/: __init__.py  defaults.py  shelephant_checksum.py  shelephant_cp.py  shelephant_dump.py  shelephant_extract.py  shelephant_get.py  shelephant_hash.py  shelephant_hostinfo.py  shelephant_merge.py  shelephant_mv.py  shelephant_parse.py  shelephant_remote.py  shelephant_rm.py  shelephant_send.py
test/: main.py  ssh_generate.py  ssh_test.py  test_main.py
test/cli/: shelephant_dump.py  shelephant_extract.py  shelephant_hash.py  shelephant_merge.py  shelephant_remote.py  shelephant_rm.py  yaml_hash.py  yaml_rm.py
tests/: old.py  ssh_generate.py  ssh_test.py  test_cli.py  test_dataset.py  test_local_rsync_scp.py  test_main.py  test_path_convert_output.py
yaml_cli/cli/: __init__.py  yaml_dump.py  yaml_dumppaths.py  yaml_get_from_remote.py  yaml_hash.py  yaml_rm.py
