[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["numpy", "click", "pyyaml", "mergedeep", "numpy", "prettytable", "termcolor"]
description = "Simple dataset management"
dynamic = ["version"]
name = "shelephant"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
shelephant_cp = "shelephant:_shelephant_cp_main"
shelephant_diff = "shelephant:_shelephant_diff_main"
shelephant_dump = "shelephant:_shelephant_dump_main"
shelephant_hostinfo = "shelephant:_shelephant_hostinfo_main"
shelephant_mv = "shelephant:_shelephant_mv_main"
shelephant_parse = "shelephant:_shelephant_parse_main"
shelephant_rm = "shelephant:_shelephant_rm_main"

[project.urls]
Source = "https://github.com/tdegeus/shelephant"

[tool.setuptools_scm]
write_to = "shelephant/_version.py"
